--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Android Studio
+*.iml
+.idea
+.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+
+# Java
+**/.classpath
+**/.project
+**/.settings/
+**/bin
+**/target
+**/pom.xml.versionsBackup
+**/.factorypath
