--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>io.github.nawaman</groupId>
     <artifactId>javalanguagemodel-base</artifactId>
-    <version>0.0.1.1</version>
+    <version>0.0.1.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     
     <name>javalanguagemodel-base</name>
