--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.nawaman</groupId>
         <artifactId>javalanguagemodel-base</artifactId>
-        <version>0.0.1.1</version>
+        <version>0.0.1.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
