--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>net.nawaman..javalanguagemodel</groupId>
+                <artifactId>javalanguagemodel-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.nawaman..javalanguagemodel</groupId>
+                <artifactId>javalanguagemodel-reflection</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            
+            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
